examples/good/I04-print-expressions.bg
(bool <= [(int x) (int y)]
  (if (> y x)
    True
    (= x y)))

(int x 0)
(while (<= x 7)
  (print x (int x (+ x 1))))
