examples/bad/argument-types-dont-match-int-bool.bg
(int addOne [(int x)] (+ x 1))
(addOne True)
